# Event-Detection

./: README.md  deep_architectures.py  generate_dataset.py  main.py  main_deep.py  run_experiment.py  run_experiment_deep.py
scapy-artemissbs/: LICENSE  README.md  azure-pipelines.yml  mypy.ini  pyproject.toml  setup.cfg  tox.ini
scapy-artemissbs/src/scapy_artemissbs/: enums.py  fields.py  layers.py  util.py
scapy-artemissbs/src/scapy_artemissbs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scapy-artemissbs/src/scapy_artemissbs/fields/: _artemissbs_boolean_field.py  _artemissbs_flags_field.py  _artemissbs_float_field.py  _artemissbs_short_boolean_field.py  _artemissbs_str_field.py  _property_field.py  _property_flags_field.py
scapy-artemissbs/src/scapy_artemissbs/layers/: _anomaly_properties.py  _artemissbs.py  _artemissbs_stream.py  _captain_select.py  _client_heartbeat.py  _climb_dive.py  _cloak_decloak.py  _comms_outgoing.py  _detonation.py  _drone_properties.py  _eng_reset_coolant.py  _eng_send_damcon.py  _engineering_console_properties.py  _explosion.py  _fighter_bay_status.py  _fire_tube.py  _generic_mesh_properties.py  _helm_request_dock.py  _helm_set_impulse.py  _helm_set_pitch.py  _helm_set_warp.py  _helm_toggle_reverse.py  _key_capture_toggle.py  _nebula_properties.py  _object_update.py  _player_ship_upgrades_properties.py  _ready.py  _sci_scan.py  _set_weapons_target.py  _simple_event_08.py  _simple_event_19.py  _toggle_auto_beams.py  _toggle_red_alert.py  _toggle_shields.py  _torpedo_properties.py  _weapons_console_properties.py  _welcome.py
scapy-artemissbs/tests/scapy_artemissbs/fields/: test_artemissbs_flags_field.py  test_artemissbs_str_field.py
scapy-artemissbs/tests/scapy_artemissbs/layers/: test_all_ship_settings.py  test_artemissbs.py  test_artemissbs_stream.py  test_black_hole_properties.py  test_console_status.py  test_eng_grid_update.py  test_engineering_console_properties.py  test_fighter_bay_status.py  test_game_message.py  test_npc_ship_properties.py  test_object_update.py  test_player_ship_properties.py  test_ship_settings.py  (+1 more)
(+5 files in other folders)
