[metadata]
name = scapy-artemissbs
version = attr: scapy_artemissbs.__version__
author = Alexander Chambers
author_email = alexander.chambers@dst.defence.gov.au
description = Scapy extensions for the Artemis Spaceship Bridge Simulator game
long_description = file: README.md
long_description_content_type = text/markdown
url = https://dev.azure.com/DST-MARC/Sprints/_git/scapy-artemissbs
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    # License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Researchers
    # Topic :: Software Development :: Build Tools,
license_files = LICENSE.txt
keywords =
    artemis
    packet

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8, <4
install_requires =
    scapy

[options.packages.find]
where = src

[options.package_data]
scapy_artemissbs =
    py.typed

[options.extras_require]
dev = 
    black
    isort
    mypy
    pylint
    pytest
    snakeviz
    tox